# bug

./: .gitignore  CMakeLists.txt  README.md  bug.cpp  bug.hpp  entity.cpp  entity.hpp  evolutionary.cpp  evolutionary.pt  food.cpp  food.hpp  geometry.cpp  helper.hpp  main.cpp  reinforcement.cpp  world.cpp  world.hpp
bug/: CMakeLists.txt  eligibilityopt.cpp  eligibilityopt.h  evolutionary.cpp  geometry.cpp  main.cpp  reinforcement.cpp  reinforcement.hpp  state.cpp
bug_2d/: CMakeLists.txt  bug.hpp  evolutionary.cpp  evolutionary.hpp  geometry.cpp  geometry.hpp  main.cpp  reinforcement.cpp  reinforcement.hpp  state.cpp  state.hpp
bug_grid/: CMakeLists.txt  main.cpp
